--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -29,6 +29,7 @@
         </ul>
         <a class="nav-link" href="{{ url_for('main.general') }}" style="margin-right: 30px;"><img src="static/images/home_ico.png" alt="#" /></a>
     </nav>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
         {% block body %}
         {% endblock %}
@@ -44,7 +45,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
         integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </body>
 
 </html>
